# rlviewer

./: .gitignore  CMakeLists.txt  Passthrough.fragmentshader  README.md  SimpleFragmentShader.fragmentshader  StandardShadingRTT.vertexshader  focal.py  render.py  setup.py
src/: controls.cpp  controls.hpp  main.cpp  objloader.cpp  objloader.hpp  rlviewer.c  rlviewer.cpp  shader.cpp  texture.cpp  vboindexer.cpp  vboindexer.hpp  viewer.cpp  viewer.h
